<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/main_panel_person"
    android:gravity="center">
    
    <TextView
        android:id="@+id/TimeOut"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/TimeOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Kills"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/Kills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/NKills"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/NKills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!--ANIMACIÓN-->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        app:lottie_imageAssetsFolder="assets"
        android:layout_margin="5dp"
        app:lottie_fileName="finjuego.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/JugarDeNuevo"
       android:text="@string/JugarDeNuevo"
       android:textColor="@color/white"
       android:background="@drawable/boton_inicio"
       android:layout_margin="10dp"
       android:layout_width="320dp"
       android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/IrAMenu"
        android:textColor="@color/white"
        android:background="@drawable/boton_inicio"
        android:layout_margin="10dp"
        android:text="@string/IrAMenu"
        android:layout_width="320dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Puntajes"
        android:background="@drawable/boton_inicio"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/Puntajes" />

</LinearLayout>