<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".EscenarioJuego">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!--Infomacion-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Valor X y Y -->
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/AnchoTv"
                android:id="@+id/AnchoTv"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/AltoTv"
                android:id="@+id/AltoTv"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/aplastados"/>
        <!--CONTADOR-->
        <TextView
            android:textColor="@color/white"
            android:id="@+id/TvContador"
            android:text="@string/TvContador"
            android:layout_width="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            />
        <!--NOMBRE-->
        <TextView
            android:id="@+id/TvNombre"
            android:text="@string/TvNombre"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            />
        <!--TIEMPO-->
        <TextView
            android:id="@+id/TvTiempo"
            android:text="@string/TvTiempo"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            />
        <!--ANIMACIÓN-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="tiempo.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
        
    </androidx.appcompat.widget.LinearLayoutCompat>
    <!--Zombie-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IvZombie"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/zombie" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>